--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "Internship Tutorial Of Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "mocha"
   },
   "author": "",
   "type": "module",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
-    "chai": "^5.0.0",
     "cookie": "^0.6.0",
     "dotenv": "^16.4.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mocha": "^10.2.0",
     "nodemon": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "swagger-ui-express": "^5.0.0"
+  },
+  "devDependencies": {
+    "chai": "^5.0.3",
+    "mocha": "^10.2.0"
   }
 }
